--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-tailwind/react": "^2.1.8",
     "next": "14.0.4",
     "react": "^18",
+    "react-awesome-loader": "^2.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
